@@ -1,7 +1,7 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2011-10-10"
+#define RUBY_RELEASE_DATE "2011-10-12"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20111010
+#define RUBY_RELEASE_CODE 20111012
 #define RUBY_PATCHLEVEL 352
 
 #define RUBY_VERSION_MAJOR 1
@@ -9,7 +9,7 @@
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2011
 #define RUBY_RELEASE_MONTH 10
-#define RUBY_RELEASE_DAY 10
+#define RUBY_RELEASE_DAY 12
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
